 * Maintenance: Migrate the contrib styleguide index view to a class-based view (Chiemezuo Akujobi)
 * Maintenance: Update djhtml to 3.0.6 (Matt Westcott)
 * Maintenance: Migrate the contrib settings edit view to a class-based view (Chiemezuo Akujobi, Sage Abdullah)
 * Maintenance: Remove django-pattern-library upper bound in testing dependencies (Sage Abdullah)


5.2.1 (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~~~

 * Fix: Add a fallback background for the editing preview iframe for sites without a background (Ian Price)
 * Fix: Remove search logging from project template so that new projects without the search promotions module will not error (Matt Westcott)
 * Fix: Ensure text only email notifications for updated comments do not escape HTML characters (Rohit Sharma)
 * Docs: Fix code example for `{% picture ... as ... %}` template tag (Rezyapkin)


5.2 LTS (01.11.2023)
~~~~~~~~~~~~~~~~~~~~

 * Redesigned page listing view (Ben Enright, Matt Westcott, Thibaud Colas, Sage Abdullah)
 * Support OpenSearch as an alternative to Elasticsearch (Matt Westcott)
 * Add support for Python 3.12 (Matt Westcott)
 * Add preview-aware and page-aware fragment caching template tags, `wagtailcache` & `wagtailpagecache` (Jake Howard)
 * Always set help text element ID for form fields with help text in `field.html` template (Sage Abdullah)
 * Move `SnippetViewSet` menu registration mechanism to base `ViewSet` class (Sage Abdullah)
 * Enable reference index tracking for models registered with `ModelViewSet` (Sage Abdullah)
 * When copying a page or creating an alias, copy its view restrictions to the destination (Sandeep Choudhary, Suyash Singh)
 * Support pickling of StreamField values (pySilver)
 * Move `SnippetViewSet` template override mechanism to `ModelViewSet` (Sage Abdullah)
 * Move `SnippetViewSet.list_display` to `ModelViewSet` (Sage Abdullah)