@@ -41,6 +41,7 @@ depth: 1
  * Update djhtml to 3.0.6 (Matt Westcott)
  * Migrate the contrib settings edit view to a class-based view (Chiemezuo Akujobi, Sage Abdullah)
  * Remove django-pattern-library upper bound in testing dependencies (Sage Abdullah)
+ * Split up functions in Elasticsearch backend for easier extensibility (Marcel Kornblum, Cameron Lamb, Sam Dudley)
 
 
 ## Upgrade considerations - changes affecting all projects
